--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 SUEE4 ist die neuerung vom bekannten SUEE3.
 Es wird komplett überarbeitet und neu aufgesetzt.
+
+Das Ziel des SUEE bleibt weiterhin, einen einfachen und sicheren Source Code für die Nutzer zu erstellen.
+Dieser kann dann durch die einzelnen Nutzer Individualisiert werden und erweitert, je nach bedarf.
